# echo-hex-editor

./: .gitignore  CLAUDE.md  CMakeLists.txt  DATA_MODEL.md  README.md  echohexedit.qrc
src/: main.cpp
src/core/: document.cpp  document.h  node.cpp  node.h  nodemodel.cpp  nodemodel.h  nodeutil.cpp  nodeutil.h
src/ext/: parser.h
src/ext/impl/bmp/: parser.cpp  parser.h
src/theme/: theme.cpp  theme.h
src/ui/: hexview.cpp  hexview.h  mainwindow.cpp  mainwindow.h  messagebox.cpp  messagebox.h  parsedview.cpp  parsedview.h  titlebar.cpp  titlebar.h  toolbar.cpp  toolbar.h
src/ui/panels/: centerpanel.cpp  centerpanel.h  leftpanel.cpp  leftpanel.h  rightpanel.cpp  rightpanel.h
